# 0.2.1.0

- Comonad and Extend instances for Transducer 
- words splitter

# 0.2.0.0

- Removed the Spliiter type. Now it's transducers for everything!
- generalizeTransducer -> _generalize
- simplifyTransducer -> _simplify
- removed chokepoint and chokepointM


# 0.1.2.0

- Added explicit bifunctors dependency.
- Added Transduce', TransduceM' type synonyms.
- Added groups', groupsM'.


# 0.1.1.0

- Changed signatures of transduce' and transduceM'.
- generalize' -> generalizeTransducer
- simplify' -> simplifyTransducer
- dropped direct profunctors dependency.